--- a/index.html
+++ b/index.html
@@ -2,9 +2,16 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/x-icon" href="public/projects/s.png">
+    <link rel="icon" type="image/x-icon" href="projects/s.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sean Richard D. Sakamoto</title>
+    <script>
+      // Prevent flash of wrong theme
+      const theme = localStorage.getItem('theme')
+      if (theme === 'dark') {
+        document.documentElement.classList.add('dark')
+      }
+    </script>
   </head>
   <body>
     <div id="root"></div>
